--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
     "swiper": "^9.4.1",
+    "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
