--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "swiper": "^9.4.1",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "3.3.2",
+    "typeface-nunito": "^1.1.13",
+    "typeface-poppins": "^1.1.13",
+    "typeface-roboto": "^1.1.13",
     "typescript": "5.1.3"
   },
   "devDependencies": {
