--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react": "18.2.0",
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
+    "react-image-gallery": "^1.2.12",
     "swiper": "^9.4.1",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@iconify/react": "^4.1.1"
+    "@iconify/react": "^4.1.1",
+    "@types/react-image-gallery": "^1.2.0"
   }
 }
