--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,4 +1,4 @@
-name: Copy Root Directory to FTP
+name: Next Static
 
 on:
   push:
@@ -13,20 +13,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Create target directory
-        run: |
-          mkdir target
-
-      - name: Copy files
-        run: |
-          cp -r . target/
-
-      - name: FTP Deploy
-        uses: SamKirkland/FTP-Deploy-Action@4.2.0
+      - name: FTP-Deploy-Action
+        uses: SamKirkland/Ftp-Deploy-Action@4.3.3
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: '/path/to/destination/folder'
-          local-dir: './target'
-          timeout: 300
+          local-dir: out
+          remote-dir: /demo
