--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  copy_files:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,10 +14,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: FTP-Deploy-Action
-        uses: SamKirkland/Ftp-Deploy-Action@4.3.3
+        uses: appleboy/scp-action@v1
         with:
-          server: ${{ secrets.FTP_SERVER }}
+          host: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: out/
-          server-dir: /demo/
+          local_file: "./out/*"
+          remote_path: "/demo/"
+          port: 22
