--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -6,15 +6,15 @@ on:
       - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: FTP-Deploy-Action
-        uses: appleboy/scp-action@v1
+        uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
