--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
@@ -19,6 +20,6 @@ jobs:
           host: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          source: "./out/*"
+          source: "out/*"
           target: "/demo/"
           port: 22
