--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -14,6 +14,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Create Remote Directory
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          port: 22
+          script: mkdir -p /demo
+
       - name: FTP-Deploy-Action
         uses: appleboy/scp-action@v0.1.4
         with:
@@ -21,5 +30,5 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           source: "out/*"
-          target: "/demo/"
+          target: "/demo"
           port: 22
