--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,5 +30,5 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           source: "out/*"
-          target: "/demo"
+          target: "/demo/"
           port: 22
