--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-image-gallery": "^1.2.12",
     "swiper": "^9.4.1",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
