--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
     "react-image-gallery": "^1.2.12",
+    "react-responsive-masonry": "^2.1.7",
     "swiper": "^9.4.1",
     "tailwind-scrollbar": "^3.0.4",
     "tailwind-styled-components": "^2.2.0",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
-    "@types/react-image-gallery": "^1.2.0"
+    "@types/react-image-gallery": "^1.2.0",
+    "@types/react-responsive-masonry": "^2.1.0"
   }
 }
