--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
     "@iconify/react": "^4.1.1",
     "@types/react-image-gallery": "^1.2.0",
     "@types/react-responsive-masonry": "^2.1.0"
-  }
+  },
+  "packageManager": "yarn@3.6.1"
 }
